--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ main {
 
 button {
    background-color: #c9a874;
+   font-family: trebuchet MS;
    border-radius: 4px;
    border-color: silver;
    cursor: pointer;
@@ -55,6 +56,28 @@ button:hover {
 }
 
 #musicbutton {
-	position: absolute;
-	left: 500px;
+
+}
+
+#content{
+  /* DON'T USE DISPLAY NONE/BLOCK! Instead: */
+  background: #aa7243;
+  padding: 10px;
+  border-radius: 8px;
+  border: 4px solid #c9a874;
+  position: absolute;
+  right: 400px;
+  bottom: 225px;
+  visibility: hidden;
+  opacity: 0;
+          transition: 0.6s;
+  -webkit-transition: 0.6s;
+          transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+}
+#content.appear{
+  visibility: visible;
+  opacity: 1;
+          transform: translateX(0);
+  -webkit-transform: translateX(0);
 }
