--- a/style.css
+++ b/style.css
@@ -34,6 +34,12 @@ body {
 	bottom: 500px;
 }
 
+#introvideo {
+	display: noe;
+	width: 600; 
+	height: 400;
+}
+
 main {
 	text-align: center;
 	width: 800px;
@@ -55,10 +61,6 @@ button:hover {
 	background-color: #B49768;
 }
 
-#musicbutton {
-
-}
-
 #content{
   /* DON'T USE DISPLAY NONE/BLOCK! Instead: */
   background: #aa7243;
@@ -66,8 +68,8 @@ button:hover {
   border-radius: 10px;
   border: 4px solid #c9a874;
   position: absolute;
-  right: 400px;
-  bottom: 225px;
+  right: 375px;
+  bottom: 210px;
   visibility: hidden;
   opacity: 0;
           transition: 0.6s;
